# SEO-audit-platform

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
app/: main.py
app/api/: __init__.py  deps.py  health.py  router.py
app/api/routes/: __init__.py  audit.py  health.py
app/core/: config.py  schemas.py  seo_config.py
app/crawler/: crawler.py  parser.py  url_utils.py
app/database/: base.py  init_db.py  session.py
app/enums/: audit_status.py
app/models/: __init__.py  audit.py  page.py  recommendation.py  seo_analysis.py
app/reports/: pdf_builder.py  pdf_styles.py
app/repositories/: audit_repository.py  base_repository.py  page_repository.py  recommendation_repository.py  seo_analysis_repository.py  seo_repository.py
app/response_schemas/: __init__.py  audit.py  page.py  recommendation.py  seo_analysis.py
app/schemas/: __init__.py  audit_detail.py  audit_request.py  audit_response.py  audit_result.py  audit_summary.py  page_data.py  page_response.py  recommendation_response.py  recommendation_result.py  seo_response.py  seo_result.py
app/services/: audit_service.py  llm_service.py  pdf_service.py  recommendation_service.py  seo_analyzer.py
frontend/: .env.production  Dockerfile  package-lock.json  package.json
frontend/src/: App.jsx  index.css
frontend/src/components/: AuditCard.jsx  AuditForm.jsx  AuditList.jsx  AuditToolbar.jsx  DashboardCharts.jsx  Hero.jsx  (+10 more)
tests/: test_audit_service.py  test_crawler.py  test_pdf_service.py  test_prompt.py  test_recommendation_service.py  test_seo_analyzer.py
(+3 files in other folders)
