[project]
name = "seo-audit-platform"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.15.0",
    "fastapi>=0.138.2",
    "google-genai>=2.10.0",
    "openai>=2.45.0",
    "openrouter>=0.11.22",
    "pydantic-settings>=2.14.2",
    "python-dotenv>=1.2.2",
    "reportlab>=5.0.0",
    "requests>=2.34.2",
    "sqlalchemy>=2.0.51",
    "uvicorn>=0.49.0",
]
